Set parchment-white background and change links to purple

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,10 @@ $grey-900: #212529;
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
+// https://colorswall.com/palette/26329
+// bone-white: #f9f6ee
+$white-color-parchment: #fafaf7 !default;
+
 // Theme colors
 
 $code-bg-color-light: rgba($purple-color, 0.05);
