Updates to people tab

--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -74,6 +74,9 @@ layout: page
               {% if profile.github %}
                 <a href="{{ profile.github }}" target="_blank"><i class="fab fa-github"></i></a>
               {% endif %}
+              {% if profile.linkedin %}
+                <a href="{{ profile.linkedin }}" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+              {% endif %}
               {% if profile.twitter %}
                 <a href="{{ profile.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a>
               {% endif %}
