--- a/_layouts/profiles.liquid
+++ b/_layouts/profiles.liquid
@@ -75,7 +75,7 @@ layout: page
                 <a href="{{ profile.github }}" target="_blank"><i class="fab fa-github"></i></a>
               {% endif %}
               {% if profile.linkedin %}
-                <a href="{{ profile.linkedin }}" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="{{ profile.linkedin }}" target="_blank"><i class="fab fa-linkedin"></i></a>
               {% endif %}
               {% if profile.twitter %}
                 <a href="{{ profile.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a>
