--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -10,6 +10,9 @@ layout: default
       {% else %}
         {{ site.title }}
       {% endif %}
+      {% if site.logo %}
+        <img src={{ site.logo }} width='30' height='30'>
+      {% endif %}
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
   </header>
