Fix title colors of colored blocks

--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -103,7 +103,7 @@ d-article {
       }
 
       h1, h2, h3, h4, h5, h6 {
-        color: var(--global-warning-block-title);
+        color: var(--global-warning-block-title) !important;
         font-style: normal !important;
         font-weight: 400 !important;
       }
@@ -129,7 +129,7 @@ d-article {
       }
 
       h1, h2, h3, h4, h5, h6 {
-        color: var(--global-danger-block-title);
+        color: var(--global-danger-block-title) !important;
         font-style: normal !important;
         font-weight: 400 !important;
       }
